--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,15 @@
   "manifest_version": 2,
 
   "name": "Twitter-Social-Toolkit",
-  "description": "Google Chrome Extenion for quick tweeting",
+  "description": "Allows you to share text, images, content, link, pages, etc. to your twitter account",
   "version": "1.0",
   "background": {
-    "scripts": ["background.js"],
-    "persistent": false
+    "scripts": ["background.js"]
   },
   "icons" : {
-    "64" : "icon.png"
+    "64" : "icon64.png",
+    "32" : "icon32.png",
+    "16" : "icon16.png",
+    "128" : "icon128.png"
   }
 }
