--- a/manifest.json
+++ b/manifest.json
@@ -12,5 +12,8 @@
     "32" : "icon32.png",
     "16" : "icon16.png",
     "128" : "icon128.png"
-  }
+  },
+  "permissions":[
+    "contextMenus"
+  ]
 }
